Shell aborts
This is on 3.34 :
Program terminated with signal SIGABRT, Aborted.
#0 __GI_raise (sig=<optimized out>) at ../sysdeps/unix/sysv/linux/raise.c:50
50 ../sysdeps/unix/sysv/linux/raise.c: No such file or directory.
[Current thread is 1 (Thread 0x7f920f641cc0 (LWP 3888))]
(gdb) bt
#0 0x00007f9215f34081 in __GI_raise (sig=<optimized out>) at ../sysdeps/unix/sysv/linux/raise.c:50
#1 0x0000563b39c1bed2 in ()
#2 0x00007f9215f34100 in <signal handler called> () at /lib/x86_64-linux-gnu/libc.so.6
#3 0x00007f9215f34081 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
#4 0x00007f9215f1f535 in __GI_abort () at abort.c:79
#5 0x00007f9216d2ddc3 in () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#6 0x00007f9216d88f6b in g_assertion_message_expr () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#7 0x00007f9216406842 in clutter_offscreen_effect_pre_paint (effect=0x7f91ac06b630) at ../clutter/clutter/clutter-offscreen-effect.c:274
#8 0x00007f92163eb2f2 in clutter_effect_real_paint (effect=0x7f91ac06b630, flags=<optimized out>) at ../clutter/clutter/clutter-effect.c:209
#9 0x00007f92163b75ba in clutter_actor_continue_paint (self=self@entry=0x563b521c8c90) at ../clutter/clutter/clutter-actor.c:4210
#10 0x00007f92163be524 in clutter_actor_paint (self=self@entry=0x563b521c8c90) at ../clutter/clutter/clutter-actor.c:4074
#11 0x00007f92163bea70 in clutter_actor_real_paint (actor=<optimized out>) at ../clutter/clutter/clutter-actor.c:3766
#12 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b51e43fb0) at ../clutter/clutter/clutter-actor.c:4162
#13 0x00007f92163be524 in clutter_actor_paint (self=self@entry=0x563b51e43fb0) at ../clutter/clutter/clutter-actor.c:4074
#14 0x00007f92163bea70 in clutter_actor_real_paint (actor=<optimized out>) at ../clutter/clutter/clutter-actor.c:3766
#15 0x00007f921615a54b in meta_window_actor_paint (actor=0x563b4f801b30) at ../src/compositor/meta-window-actor.c:736
#16 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b4f801b30) at ../clutter/clutter/clutter-actor.c:4162
#17 0x00007f92163be524 in clutter_actor_paint (self=0x563b4f801b30) at ../clutter/clutter/clutter-actor.c:4074
#18 0x00007f92163e08ad in clutter_clone_paint (actor=0x563b52139e80) at ../clutter/clutter/clutter-clone.c:192
#19 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b52139e80) at ../clutter/clutter/clutter-actor.c:4162
#20 0x00007f92163be524 in clutter_actor_paint (self=self@entry=0x563b52139e80) at ../clutter/clutter/clutter-actor.c:4074
#21 0x00007f92163bea70 in clutter_actor_real_paint (actor=<optimized out>) at ../clutter/clutter/clutter-actor.c:3766
#22 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b52186ba0) at ../clutter/clutter/clutter-actor.c:4162
#23 0x00007f92163be524 in clutter_actor_paint (self=self@entry=0x563b52186ba0) at ../clutter/clutter/clutter-actor.c:4074
#24 0x00007f92163bea70 in clutter_actor_real_paint (actor=<optimized out>) at ../clutter/clutter/clutter-actor.c:3766
#25 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b52186850) at ../clutter/clutter/clutter-actor.c:4162
#26 0x00007f92163be524 in clutter_actor_paint (self=self@entry=0x563b52186850) at ../clutter/clutter/clutter-actor.c:4074
#27 0x00007f92163bea70 in clutter_actor_real_paint (actor=<optimized out>) at ../clutter/clutter/clutter-actor.c:3766
#28 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b520b3d70) at ../clutter/clutter/clutter-actor.c:4162
#29 0x00007f92163be524 in clutter_actor_paint (self=self@entry=0x563b520b3d70) at ../clutter/clutter/clutter-actor.c:4074
#30 0x00007f92163bea70 in clutter_actor_real_paint (actor=<optimized out>) at ../clutter/clutter/clutter-actor.c:3766
#31 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b3cd12ac0) at ../clutter/clutter/clutter-actor.c:4162
#32 0x00007f92163be524 in clutter_actor_paint (self=self@entry=0x563b3cd12ac0) at ../clutter/clutter/clutter-actor.c:4074
#33 0x00007f92163bea70 in clutter_actor_real_paint (actor=<optimized out>) at ../clutter/clutter/clutter-actor.c:3766
#34 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b3daf3c50) at ../clutter/clutter/clutter-actor.c:4162
#35 0x00007f92163be524 in clutter_actor_paint (self=0x563b3daf3c50) at ../clutter/clutter/clutter-actor.c:4074
#36 0x00007f9215eb1f28 in () at /usr/lib/gnome-shell/libst-1.0.so
#37 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b3dc1c290) at ../clutter/clutter/clutter-actor.c:4162
#38 0x00007f92163be524 in clutter_actor_paint (self=self@entry=0x563b3dc1c290) at ../clutter/clutter/clutter-actor.c:4074
#39 0x00007f92163bea70 in clutter_actor_real_paint (actor=<optimized out>) at ../clutter/clutter/clutter-actor.c:3766
#40 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b3dc1b940) at ../clutter/clutter/clutter-actor.c:4162
#41 0x00007f92163be524 in clutter_actor_paint (self=0x563b3dc1b940) at ../clutter/clutter/clutter-actor.c:4074
#42 0x00007f9215eb1f28 in () at /usr/lib/gnome-shell/libst-1.0.so
#43 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b3ccbb0d0) at ../clutter/clutter/clutter-actor.c:4162
#44 0x00007f92163be524 in clutter_actor_paint (self=self@entry=0x563b3ccbb0d0) at ../clutter/clutter/clutter-actor.c:4074
#45 0x00007f92163bea70 in clutter_actor_real_paint (actor=<optimized out>) at ../clutter/clutter/clutter-actor.c:3766
#46 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b3ca9f860) at ../clutter/clutter/clutter-actor.c:4162
--Type <RET> for more, q to quit, c to continue without paging--
#47 0x00007f92163be524 in clutter_actor_paint (self=self@entry=0x563b3ca9f860) at ../clutter/clutter/clutter-actor.c:4074
#48 0x00007f92163bea70 in clutter_actor_real_paint (actor=<optimized out>) at ../clutter/clutter/clutter-actor.c:3766
#49 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b3ca9c980) at ../clutter/clutter/clutter-actor.c:4162
#50 0x00007f92163be524 in clutter_actor_paint (self=0x563b3ca9c980) at ../clutter/clutter/clutter-actor.c:4074
#51 0x00007f921641a67a in clutter_stage_paint (self=<optimized out>) at ../clutter/clutter/clutter-stage.c:948
#52 0x00007f9216138ced in meta_stage_paint (actor=0x563b3b8701f0) at ../src/backends/meta-stage.c:192
#53 0x00007f92163b76df in clutter_actor_continue_paint (self=self@entry=0x563b3b8701f0) at ../clutter/clutter/clutter-actor.c:4162
#54 0x00007f92163be524 in clutter_actor_paint (self=0x563b3b8701f0) at ../clutter/clutter/clutter-actor.c:4074
#55 0x00007f921641f015 in clutter_stage_do_paint_view (stage=0x563b3b8701f0, view=0x7f92044c9320, clip=0x563b3b86fea8) at ../clutter/clutter/clutter-stage.c:901
#56 0x00007f9216138bf0 in meta_stage_paint_view (stage=0x563b3b8701f0, view=0x7f92044c9320) at ../src/backends/meta-stage.c:215
#57 0x00007f921641b815 in _clutter_stage_paint_view (stage=stage@entry=0x563b3b8701f0, view=view@entry=0x7f92044c9320, clip=clip@entry=0x7ffd4880a530) at ../clutter/clutter/clutter-stage.c:925
#58 0x00007f9216451c2a in paint_stage (stage_cogl=stage_cogl@entry=0x563b3b8aee00, view=view@entry=0x7f92044c9320, clip=clip@entry=0x7ffd4880a530)
at ../clutter/clutter/cogl/clutter-stage-cogl.c:527
#59 0x00007f921645299d in clutter_stage_cogl_redraw_view (stage_window=stage_window@entry=0x563b3b8aee00, view=0x7f92044c9320) at ../clutter/clutter/cogl/clutter-stage-cogl.c:877
#60 0x00007f9216452feb in clutter_stage_cogl_redraw (stage_window=0x563b3b8aee00) at ../clutter/clutter/cogl/clutter-stage-cogl.c:982
#61 0x00007f921641be2f in clutter_stage_do_redraw (stage=<optimized out>) at ../clutter/clutter/clutter-stage.c:1347
#62 0x00007f921641be2f in _clutter_stage_do_update (stage=<optimized out>) at ../clutter/clutter/clutter-stage.c:1469
#63 0x00007f9216405909 in master_clock_update_stages (master_clock=<optimized out>, stages=0x563b3c9197b0 = {...}) at ../clutter/clutter/clutter-master-clock-default.c:366
#64 0x00007f9216405909 in clutter_clock_dispatch (source=<optimized out>, callback=<optimized out>, user_data=<optimized out>) at ../clutter/clutter/clutter-master-clock-default.c:489
#65 0x00007f9216d60ebd in g_main_context_dispatch () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#66 0x00007f9216d61140 in () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#67 0x00007f9216d61413 in g_main_loop_run () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#68 0x00007f9216171c6c in meta_run () at ../src/core/main.c:668
#69 0x0000563b39c1b865 in ()
#70 0x00007f9215f20bbb in __libc_start_main (main=0x563b39c1b480, argc=1, argv=0x7ffd4880a9c8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffd4880a9b8)
at ../csu/libc-start.c:308
#71 0x0000563b39c1ba4a in ()